ProdIND/ProdPrograms/force-app/main/default/objects/MFC_City_Master__c/MFC_City_Master__c.object-meta.xml
<CustomObject>
    <label>MFC City Master</label>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MFC City Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>