ProdIND/ProdPrograms/force-app/main/default/objects/MFC_City_Master__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <externalId>true</externalId>
    <label>City Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>