ProdIND/ProdPrograms/force-app/main/default/objects/MFC_City_Master__c/fields/City_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Name_Code__c</fullName>
    <formula>Name + &apos;-&apos; + LPAD(City_Code__c, 3, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Name Code</label>
    <type>Text</type>
</CustomField>