ProdIND/ProdPrograms/force-app/main/default/objects/MFC_City_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City_Name_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>